...
        onPressAction={({ nativeEvent }) => {
          handleMenuAction(nativeEvent.event);
        }}
        actions={actions}
      >
        <View
          testID="sleep-timer-control"
          accessible={true}
          accessibilityRole="button"
          accessibilityLabel={translate("accessibility.sleepTimer")}
          accessibilityValue={{ text: getDisplayText() }}
          style={{
            flexDirection: "row",
...
